--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
-<<<<<<< HEAD
+/* <<<<<<< HEAD */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -15,9 +16,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -26,6 +29,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -44,5 +48,6 @@
 .read-the-docs {
   color: #888;
 }
-=======
->>>>>>> c4b130562bd4dad42a9f9f0c71d62a25f9724d5d
+
+/* ======= */
+/* >>>>>>> c4b130562bd4dad42a9f9f0c71d62a25f9724d5d */
