--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+/* <<<<<<< HEAD */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -25,12 +25,13 @@ a {
 }
 a:hover {
   color: #535bf2;
-=======
+/* ======= */
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
->>>>>>> c4b130562bd4dad42a9f9f0c71d62a25f9724d5d
+/* >>>>>>> c4b130562bd4dad42a9f9f0c71d62a25f9724d5d */
 }
 
 body {
