--- a/src/components/header.css
+++ b/src/components/header.css
@@ -28,7 +28,7 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 230px;
+    width: 250px;
     height: 30px;
     position: absolute;
     right: 1.5rem;
@@ -69,6 +69,14 @@ h2 {
     color: #1C2329;
 }
 
+p {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 0.75rem;
+    color: #1C2329;
+}
+
 .search-container {
     width: 14rem;
     height: 40px;
@@ -83,7 +91,7 @@ h2 {
     width: 100%;
     height: 40px;
     padding: 0 12px;
-    font-size: 0.65rem;
+    font-size: 0.75rem;
     border: 1px solid #E5E3DC;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.08);
     border-radius: 20px;
@@ -112,6 +120,7 @@ h2 {
 }
 
 .search-button {
+    display: flex;
     position: relative;
     float: right;
     width: 26px;
@@ -119,7 +128,9 @@ h2 {
     border-radius: 50%;
     background: #F68F56;
     top: -2rem;
-    right: 0.5rem;
+    right: 0.75rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .popover {
@@ -138,15 +149,18 @@ h2 {
     transition: 0.2s;
 }
 
-.popover>button,
+header .group .popover button {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 0.75rem;
+}
+
 .menu>button {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
     color: #1c2329;
-}
-
-.menu>button {
     font-size: 1rem;
     line-height: 36px;
     text-align: start;
