--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,14 @@
-<<<<<<< HEAD
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,20 +17,15 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
-=======
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
->>>>>>> c4b130562bd4dad42a9f9f0c71d62a25f9724d5d
-}
+} */
 
 body {
   display: flex;
