--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -7,12 +7,12 @@ body {
 footer {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: static;
     justify-content: space-around;
     left: 0;
     bottom: 0;
     width: 100vw;
-    height: 215px;
+    height: 160px;
     background: #FAF9F6;
 }
 
@@ -37,7 +37,7 @@ footer div:nth-child(2) {
     justify-content: center;
     align-items: center;
     width: 200px;
-    height: 36px;
+    height: 32px;
 }
 
 .social-icons>button {
