Falta agregar estilo

--- a/src/components/saleModule/saleModule.css
+++ b/src/components/saleModule/saleModule.css
@@ -155,3 +155,41 @@
     border: 1px solid white;
     border-radius: 10px;
 }
+
+.confirmation{
+    margin: 4rem;
+    font-size: 132%; /*el font size despues de tener todo armado hay que pasarlo a algo mas general, porque va a estar en todas las clases igual*/
+    height: 100%; /*el heigth tambien*/
+    max-height: 100vh;
+    /* FLEX */
+        display: flex;
+        flex-direction: column;
+        align-items: center; /*en realidad todo esto*/
+}
+
+.confirmation   p{
+    margin-bottom: 1.5rem;
+    width: 100%;
+}
+
+.confirmation .confirmation-data{
+    /* FLEX */
+        display: flex;
+        justify-content: space-between;
+}
+
+.confirmation .clothes-data{
+    width: 40%;
+    padding: 1em;
+    /* FLEX */
+        display: flex;
+        flex-direction: column;
+}
+.confirmation .contact-data{
+    width: 40%;
+    padding: 1em;
+    background-color: #F5F4F1;
+    /* FLEX */
+        display: flex;
+        flex-direction: column;
+}
