--- a/src/components/saleModule/others/others.css
+++ b/src/components/saleModule/others/others.css
@@ -1,11 +1,12 @@
 .back-forward{
-    position: absolute;
-    bottom: 30%;
-    width: 90%;
+    /* position: absolute;
+    bottom: 20%; */
+    width: 100%;
     border: 0px solid black;
         /* FLEX */
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        align-items: flex-end;
 }
 
 .back-forward button{
