Agregue alguna bobada de css

--- a/src/components/saleModule/saleModule.css
+++ b/src/components/saleModule/saleModule.css
@@ -99,6 +99,10 @@
     padding: 0.3rem 0;
 }
 
+.product-description .btSelected{
+    background-color: #FFBC6D;
+}
+
 #pd-sex{
     width: 100%;
 }
