--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
- a {
+a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -22,6 +22,7 @@
 a:hover {
   color: #535bf2;
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -35,4 +36,5 @@ body {
   min-width: 320px;
   min-height: 100vh;
   justify-content: center;
+  background-color: rgba(250, 249, 246, 1);
 }
