--- a/src/components/saleModule/saleModule.css
+++ b/src/components/saleModule/saleModule.css
@@ -113,7 +113,7 @@
     font-size: 1.3rem;
 }
     
-.add-picture div{
+.add-picture .ap-div{
     width: 15%;
     margin-top: 2rem;
     padding: 3.5rem 0 1.5rem;
